# backend/usecase/output/route.go
@@ -3,11 +3,10 @@ package output
 // ValhallaRouteResponse は Valhalla APIからのレスポンス構造
 type ValhallaRouteResponse struct {
 	Trip      Trip         `json:"trip,omitempty"`      // 単一ルートの場合
-	Alternates []Trip      `json:"alternates,omitempty"` // 複数ルートの場合
+	Alternates []Alternate `json:"alternates,omitempty"`  // 複数ルートの場合
 	Admins    []Admin      `json:"admins"`
 	Units     string       `json:"units"`
 	Language  string       `json:"language"`
-	Obstacles []Obstacle   `json:"obstacles,omitempty"` // 追加: ルート上の障害物
 }
 
 type Trip struct {
@@ -18,6 +17,7 @@ type Trip struct {
 	Status        int         `json:"status"`
 	Units         string      `json:"units"`
 	Language      string      `json:"language"`
+	Obstacles     []Obstacle   `json:"obstacles,omitempty"` // 追加: ルート上の障害物
 }
 
 type LocationInfo struct {
@@ -73,4 +73,8 @@ type Admin struct {
 	AdminLevel int    `json:"admin_level"`
 	Iso31661Alpha3 string `json:"iso_3166_1_alpha3"`
 	Iso31661   string `json:"iso_3166_1"`
+}
+
+type Alternate struct {
+	Trip Trip `json:"trip"`
 } 
